--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "aphrodite": "^2.1.0"
+    "aphrodite": "^2.1.0",
+    "chai": "^4.1.2",
+    "mocha": "^5.0.4",
+    "sequelize-mock": "^0.10.2"
   }
 }
