--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "schoolcast",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3002",
   "dependencies": {
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
