--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "aphrodite": "^2.1.0",
     "chai": "^4.1.2",
     "mocha": "^5.0.4",
+    "react-router": "^4.2.0",
     "sequelize-mock": "^0.10.2"
   }
 }
