--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "aphrodite": "^2.1.0",
     "chai": "^4.1.2",
     "mocha": "^5.0.4",
+    "moment-timezone": "^0.5.16",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "redux": "^3.7.2",
