--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "@blueprintjs/core": "^2.2.1",
     "aphrodite": "^2.1.0",
     "chai": "^4.1.2",
     "mocha": "^5.0.4",
     "moment-timezone": "^0.5.16",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
+    "react-transition-group": "^2.3.1",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "sequelize-mock": "^0.10.2"
