--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "sequelize": "^4.37.1",
+    "sequelize-cli": "^4.0.0",
     "sqlite3": "^4.0.0"
   },
   "scripts": {
