--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "chai": "^4.1.2",
     "mocha": "^5.0.4",
     "moment-timezone": "^0.5.16",
+    "react-html-parser": "^2.0.2",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-transition-group": "^2.3.1",
